# DroidPlugin

./: .gitignore  index.html  params.json  readme.md  readme_cn.md
project/Test/ApiTest/: AndroidManifest.xml  CMakeLists.txt  build.gradle
project/Test/ApiTest/jni/: Core.cpp
project/Test/ApiTest/jni/HelperJni/: HelperJni.cpp  HelperJni.h
project/Test/ApiTest/jni/help/nativehelper/: JNIHelp.cpp
project/Test/ApiTest/res/layout/: activity_activity_test.xml  activity_launchmode.xml  activity_native_test.xml  activity_single_instance.xml  activity_single_task.xml  activity_single_top.xml  activity_standard.xml  activity_web_view_test.xml  broadcast_receiver.xml  main.xml  service.xml
project/Test/ApiTest/res/values/: strings.xml
project/Test/ApiTest/res/values-v11/: styles.xml
project/Test/ApiTest/res/values-v14/: styles.xml
project/Test/ApiTest/src/com/example/ApiTest/: ActivityTestActivity.java  Binder2.aidl  BroadcastReceiverTest.java  ContentProviderTest.java  ContentProviderTest2.java  LaunchModeTestActivity.java  MyActivity.java  MyContentProvider1.java  NativeTestActivity.java  NotificationTest.java  Service1.java  Service2.java  Service3.java  Service4.java  ServiceTest1.java  SingleInstanceActivity.java  SingleTaskActivity.java  SingleTopActivity.java  StandardActivity.java  WebViewTestActivity.java
project/Test/ApiTest/src/com/morgoo/binder/: SocketBinder.java  SocketServiceManager.java
project/Test/ApiTest/src/main/: AndroidManifest.xml
project/Test/ApiTest/src/main/cpp/: Core.cpp
project/Test/ApiTest/src/main/cpp/help/: log.h
(+301 files in other folders)
